added FormalizedMajorityVoting Algorithim